--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1667,11 +1667,12 @@ h3 {
 		}
 		.result {
 			border: 10px solid #e9e9e9;
+			border-bottom: none;
 			margin: 0 0 30px 0;
 			
 			h4 {
 				font-size: 18px;
-				padding: 0 @base *2 @base * 0.5 @base;
+				padding: @base * 0.3 @base *2 @base @base;
 				border-bottom: 1px solid @color-grey-accent;
 				margin-bottom: @base;
 				.verse {
@@ -1693,6 +1694,9 @@ h3 {
 				.teacher {
 					margin-right: 0;
 				}
+			}
+			.badge {
+				margin-right: 5px;
 			}
 			.icon-book {
 				top: 5px;
