--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -145,11 +145,11 @@ address, blockquote, cite, h1, h2, h3, h4, h5, h6, li, p, pre, span, .descriptio
 // bootstrap overrides
 
 [class^="icon-"] {
-	background-image: url(../../../bootstrap/img/glyphicons-halflings.png);
+	background-image: none; //url(../../../bootstrap/img/glyphicons-halflings.png);
 }
 
 .icon-white {
-	background-image: url(../../../bootstrap/img/glyphicons-halflings-white.png);
+	background-image: none; //url(../../../bootstrap/img/glyphicons-halflings-white.png);
 }
 
 .column-full-width,
