more style changes

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -285,13 +285,14 @@ h3 {
 	margin: 30px 0 30px 0;
 
 	.row {
-		margin: 20px auto 0 auto;
+		margin: 30px auto 0 auto;
 		
 		.span8 {
 			margin-left: 0;
 			h2 {
 				color: #fff;
 				margin-top: 0;
+				margin-bottom: 15px;
 			}
 			p {
 				.body-text-serif;
@@ -302,7 +303,7 @@ h3 {
 			background: darken(desaturate(@color-mast, 10%), 5%);
 			.link-bar {
 				position: relative;
-				top: -11px;
+				top: -3px;
 				font-size: 14px;
 				#font > #proxima > .bold;
 				color: #fff;
@@ -323,12 +324,13 @@ h3 {
 			blockquote {
 				.body-text-serif;
 				border: none;
-				padding: 15px 15px 0 15px;
+				padding: 13px 15px 0 15px;
 			}
 			cite {
 				.small-grey-text;
 				color: #fff;
 				display: block;
+				margin-top: @base * 0.5;
 				padding: 0 15px 5px 15px;
 			}
 		}
