--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -871,7 +871,7 @@ h3 {
 
 // home --------------------------------------------------------------
 
-.home {
+.page-home {
 	
 	h3 {
 		margin-bottom: 15px;
@@ -888,7 +888,6 @@ h3 {
 	}
 	
 	.featured {
-
 		img {
 			width: 300px;
 			height: 200px;
