--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1376,7 +1376,7 @@ h3 {
 			margin-bottom: @base * 3;
 
 			img {
-				margin: 0 auto @base auto;
+				margin: @base auto @base auto;
 				.border-radius(100%);
 			}
 
