--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1435,9 +1435,9 @@ h3 {
 
 				img {
 					position: relative;
-					left: -15px;
+					left: -20px;
 					margin-right: @base;
-					margin-bottom: @base;
+					margin-bottom: @base * 0.5;
 					.border-radius(100%);
 					width: 75px;
 					height: 75px;
