--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1512,7 +1512,10 @@ h3 {
 				}
 
 				.info  {
-
+					position: relative;
+					left: -@base * 1.5;
+					padding-top: @base * 0.5;	
+					
 					h4 {
 						padding: @base * 1.25 0 0 0;
 						margin-bottom: @base * .125;
