--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1195,31 +1195,31 @@ h3 {
 				}
 			}
 		}
-		
-		
-		&.individual {
-		
-			.back {
-				margin: 15px 0 30px 0;
-			}
 
-			.entry {
-				border: none;
-				.header,
-				.description,
-				.help-block {
-					padding-left: 0;
-					padding-right: 0;
-				}
-				
-				.header {
-					margin: 0;
-				}
-				
-			}
+	}
+}
+
+.profile {
+	.component-events {
+		
+		.back {
+			margin: 15px 0 30px 0;
 		}
-		
 
+		.entry {
+			border: none;
+			.header,
+			.description,
+			.help-block {
+				padding-left: 0;
+				padding-right: 0;
+			}
+			
+			.header {
+				margin: 0;
+			}
+			
+		}
 	}
 }
 
