--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -779,7 +779,7 @@ h3 {
 		outline: none;
 		border:none;
 	}
-	::-webkit-input-placeholder  {
+	input::-webkit-input-placeholder  {
 		color: darken(desaturate(@color-mast, 20%), 20%);
 		#font > #proxima > .regular;
 		text-transform: uppercase; 
