--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -514,6 +514,14 @@ h3 {
 					}
 				}
 			}
+			
+			&.last {
+				margin-right: 0;
+				
+				a {
+					margin-right: 0;
+				}
+			}
 
 			a {
 				color: #ffffff;
