--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -769,6 +769,16 @@ h3 {
 	* {
 		float: left;
 	}
+	a {
+		width: auto;
+		float: left !important;
+		padding-right: 0 !important;
+		margin-right: 0 !important;
+	}
+	.icon {
+		position: relative;
+		top: 1px;
+	}
 	span {
 		color: darken(desaturate(@color-mast, 20%), 20%);
 	}
