--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1663,7 +1663,7 @@ h3 {
 
 // teachings -------------------------------------------------------
 
-.component-teachings {
+.component-teachings, .component-series {
 
 	h4 {
 		font-size: 16px;
