--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -570,14 +570,12 @@ h3 {
 	#font > #proxima > .regular;
 	font-size: 12px;
 	text-transform: uppercase;
-	padding-bottom: 50px;
-
+	margin: @base * 4 0 @base * 2 0;
 	a {
 		color: #999;
 		background: #f3f3f0;
 		display: block;
 		padding: 4px 6px;
-		margin-bottom: 60px;
 
 		&:hover {
 			background: #f5f5f5;
@@ -1905,7 +1903,6 @@ h3 {
 		}
 	}
 }
-	
 
 
 // videos 
