--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1905,6 +1905,34 @@ h3 {
 }
 
 
+.column-full-width {
+	.component-teachings {
+		h1 {
+			
+			.verse {
+				border-top: 1px solid #ccc;
+				padding-top: @base * 2;
+				font-size: 32px;
+				text-transform: uppercase;
+				color: #ccc;
+			}
+		}
+		
+		.meta {
+			margin: @base * 2 0;
+			
+			p {
+				font-size: 20px;
+			}
+		}
+		
+		.tags {
+			margin: @base * 2 0;
+			text-transform: uppercase;
+		}
+	}
+}
+
 // videos 
 
 
