--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -350,7 +350,7 @@ h3 {
 				margin-bottom: 15px;
 			}
 
-			p { 
+			p {
 				.body-text-serif;
 				color: #fff;
 			}
@@ -1190,7 +1190,7 @@ h3 {
 		.entry {
 			margin: 0 0 @base *3 0;
 			background: #fdfdfd;
-			border: @base solid #ddd;
+			border: @base solid #e9e9e9;
 			padding: 0;
 			position: relative;
 
@@ -1680,7 +1680,7 @@ h3 {
 			font-size: 14px;
 		}
 
-		.suggestions, .filter {
+		.alternatives, .suggestions, .filter {
 			#font > #tisa > .regular;
 			border: @base solid #E9E9E9;
 			margin: @base 0 @base * 2 0;
@@ -1721,7 +1721,7 @@ h3 {
 			}
 		}
 		
-		.suggestions {
+		.alternatives, .suggestions {
 			padding-bottom: 5px;
 			
 			a {
@@ -1734,11 +1734,17 @@ h3 {
 
 	.entries {
 		margin: @base * 4 0;
+		
+		.span8 {
+			padding-top: @base;
+		}
 	}
 
 	.entry {
-		padding: 20px 0;
-		border-bottom: 1px solid #999;
+		margin: 0 0 @base *3 0;
+		background: #fdfdfd;
+		border: @base solid #e9e9e9;
+		padding: @base;
 
 		a {
 			display: block;
