--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1830,6 +1830,11 @@ h3 {
 		&:hover {
 			color: @color-accent;
 		}
+		
+		.meta {
+			#font > #tisa > .regular;
+			color: #999;
+		}
 	}
 
 	.latest {
@@ -1851,13 +1856,6 @@ h3 {
 				&:hover {
 					color: @color-accent;
 				}
-			}
-		}
-
-		.meta {
-
-			p {
-				line-height: 1.8;
 			}
 		}
 
@@ -2004,6 +2002,14 @@ h3 {
 					color: @color-accent;
 					text-shadow: none;
 				}
+				
+				a {
+					color: #303030;
+				
+					&:hover {
+						color: @color-accent;
+					}
+				}
 			}
 
 			.meta {
@@ -2106,7 +2112,7 @@ h3 {
 .column-full-width {
 	.component-teachings {
 	
-		.result {
+		.individual {
 			
 			h1 {
 			
