--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -335,7 +335,7 @@ h3 {
 
 .mast {
 	background: @color-mast;
-	padding: @base * 4 0;
+	padding: 7px 0 @base * 1.5 0;
 	margin: @base * 3 0 @base * 3 0;
 
 	.row {
@@ -2290,7 +2290,7 @@ h3 {
 	.header {
 
 		.nav {
-			margin-top: 20px;
+			margin-top: @base * 2;
 			margin-bottom: 0;
 			padding: 0 0;
 		}
@@ -2301,7 +2301,7 @@ h3 {
 	}
 
 	.mast {
-		margin-top: @base * 8;
+		padding-top: @base * 9.7;
 		padding-bottom: 20px;
 
 		.row {
