More changes to .tags

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1892,6 +1892,15 @@ h3 {
 			top: -10px;
 			margin: 0;
 		}
+		
+		.tags {
+		
+			a {
+				#font > #proxima > .bold;
+				text-transform: uppercase;
+				font-size: 12px;
+			}
+		}
 	}
 
 	.series,
@@ -2068,6 +2077,9 @@ h3 {
 			}
 
 			.tags {
+				#font > #proxima > .bold;
+				text-transform: uppercase;
+				font-size: 12px;
 				border-color: #e9e9e9;
 				border-bottom: none;
 				padding: @base @base @base @base;
