--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -2310,6 +2310,19 @@ h3 {
 
 @media (max-width: 979px) {
 
+	.layout-home {
+	
+		.featured {
+		
+			a {
+				display: block;
+				margin-bottom: 20px;
+			}
+			
+		}
+		
+	}
+
 	.header {
 
 		.nav {
